--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,3 +54,16 @@ $grid-breakpoints: (
     flex-shrink: 0;
   }
 }
+
+// Disable arrows on number input
+// Chrome, Safari, Edge, Opera 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+// Firefox 
+input[type=number] {
+  -moz-appearance: textfield;
+}
