--- a/src/components/Auth.scss
+++ b/src/components/Auth.scss
@@ -12,3 +12,10 @@
 .selectGroupText {
   font-size: 1.1rem;
 }
+
+.groupError {
+  margin-bottom: 10px;
+  color: red;
+  font-size: 14px;
+  display: block;
+}
