more ux cleanup

--- a/src/components/Auth.scss
+++ b/src/components/Auth.scss
@@ -19,3 +19,10 @@
   font-size: 14px;
   display: block;
 }
+
+.groupSuccess {
+  margin-bottom: 10px;
+  color: #3B3CD4;
+  font-size: 14px;
+  display: block;
+}
