--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -74,3 +74,10 @@ input[type=number] {
   width: 55%;
   padding: 40px 80px;
 }
+
+@media only screen and (max-width: 800px) {
+  .formContainer {
+    width: 100%;
+    padding: 12px;
+  }
+}
