--- a/src/components/Auth.scss
+++ b/src/components/Auth.scss
@@ -38,6 +38,16 @@
   white-space: pre-wrap;
 }
 
+.forwardBackButton > button {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.forwardBackButton > button:hover {
+  font-weight: 800;
+  text-decoration: none;
+}
+
 @media only screen and (max-width: 800px) {
   .previewCard {
     max-width: 100%;
