--- a/src/components/SectionHeader.scss
+++ b/src/components/SectionHeader.scss
@@ -11,5 +11,6 @@
     // So we can have max-width but still
     // have alignment controlled by text-align.
     display: inline-block;
+    font-size: 1.2rem;
   }
 }
