--- a/src/components/HeroSection.scss
+++ b/src/components/HeroSection.scss
@@ -7,22 +7,35 @@
 .badgesContainer {
   display: flex;
   max-height: 100px;
+
+  & > a, & > div {
+    height: 85px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
 }
 
 .badges {
-  max-width: 90%;
-  // height: 100%;
-  margin: -5px -10px;
+  height: 100%;
+  margin: -5px 0;
+  margin-left: -12px;
 }
 
 .badgeLinkContainer {
   display:flex;
   justify-content: start;
 }
+
 .badges:hover {
   cursor: pointer;
 }
 
-.second {
-  // margin: -15px 0;
+.appStore {
+  background-color: grey;
+  border-radius: 8px;
+  padding: 5px 10px;
+  height: 57px;
+  max-width: 200px;
+  color: white !important;
 }
