new color dark blue

--- a/src/components/DownloadSection.scss
+++ b/src/components/DownloadSection.scss
@@ -9,6 +9,6 @@
   max-width: none !important;
   text-align: left;
   border-radius: 10px;
-  background-color: #f7f7ff;
+  background-color: #e6eefc;
   padding: 40px 80px;
 }
