--- a/src/components/HealthCareWorkerSection.scss
+++ b/src/components/HealthCareWorkerSection.scss
@@ -5,8 +5,8 @@
   justify-content: center;
   padding: 40px 60px;
   border-radius: 10px;
-  background-color: #f7f7ff;
-  border: 1.5px solid rgb(59, 60, 212);
+  background-color: #e6eefc;
+  border: 1.5px solid  #254FA4;
   
   & > a {
     margin: 0px 40px;
