--- a/src/components/previousAlerts.scss
+++ b/src/components/previousAlerts.scss
@@ -15,7 +15,7 @@
 }
 
 .emptyMessage {
-  color: rgb(59, 60, 212);
+  color:  #254FA4;
 }
 
 .backButton {
@@ -34,7 +34,7 @@
 
 .messageContainer {
   border-radius: 10px;
-  background-color: #f7f7ff;
+  background-color: #e6eefc;
   padding: 40px 80px;
 }
 
