--- a/src/components/Section.scss
+++ b/src/components/Section.scss
@@ -3,6 +3,9 @@
   .container {
     position: relative;
   }
+  @media screen and (max-width: 769px) {
+    padding-top: 30px;
+  }
 
   // Add light border if two white
   // sections next to each other.
